tests/integration/error/import_alias_duplicate.alo
// expect-error: Duplicate import alias: 'vis'

import "../fixtures/visibility_symbols.alo" as vis;
import "../fixtures/visibility_symbols.alo" as vis;

fun main() -> void {}
